<resources>
    <string name="app_name">مساعد الفلاح</string>
    <string name="record_and_send_your_question">صور وابعت سؤالك..</string>
    <string name="uploaded">تم تحميل</string>
    <string name="video_uploaded">تم تحميل الفيديو بنجاح</string>
    <string name="uploading">جاري التحميل</string>
    <string name="please_wait">انتظر من فضلك</string>
    <string name="write_answer_here">اكتب اجابتك هنا..</string>
    <string name="browse_all_videos">شوف كل الأسئلة</string>
    <string name="press_to_record">ابدأ بتسجيل اجابتك</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_questions">أسئلتك</string>
    <string name="other_questions">أسئلة أخرى</string>
    <string name="uploaded_successfully">تم تحميل الفيديو بنجاح</string>
    <string name="progress_uploading">Uploading…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="uploading_in_progress">جاري التحميل</string>
    <string name="compressing">Compressing..</string>
    <string name="no_current_questions">لا يوجد أسئلة حالية</string>
    <string name="no_intenet_connection">لا يوجد اتصال بالانترنت</string>
    <string name="connect_try_again">عاود الاتصال بشبكة الانترنت وحاول مرة أخرى</string>
    <string name="retry">أعد المحاولة</string>
    <string name="recorded_audio_saved_successfully">تم تسجيل اجابتك بنجاح</string>
    <string name="uploading_audio">جاري تحميل التسجيل</string>
    <string name="no_more_videos">لا يوجد فيديوهات أخرى</string>
    <string name="max_video_duarion_exceed">المدة القصوي للفيديو 30 ثانية</string>
    <string name="uploaded_done_successfully">تم تحميل الفيديو بنجاح</string>
    <string name="start_adding_your_first_question">ابدأ بإضافة سؤالك الأول</string>
    <string name="cant_upload_video_max_cause">لا يمكنك تحميل هذا الفيديو .. أقصي مدة 30 ثانية</string>
    <string name="failed">حدث خطأ</string>
    \

</resources>