<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".presentation.StartActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/cornered_white_bg"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/openRecordScreenButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/ic_menu_report_image"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/record_and_send_your_question"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/openVideosScreenButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/presence_video_away"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/browse_all_videos"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />


    </LinearLayout>




</RelativeLayout>